<resources>
    <string name="app_name">Video Call</string>
    <string name="action_settings">Settings</string>
    <string name="add_friend">Add frined</string>
    <string name="remove_friend">Remove friend</string>
    <string name="edit_friend_nickname">Modify nickname</string>
    <string name="camera">Camera</string>
    <string name="robot">robot</string>
    <string name="robotid">robot</string>
    <string name="roomid">room</string>
    <string name="phonenumber">phone</string>
    <string name="leftslash">/</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="number_asterisk">*</string>
    <string name="number_pound">#</string>
    <string name="nofound_image">Notfound_image</string>
    <string name="friendlist">friend list</string>
    <string name="calllist">call list</string>
    <string name="invite_calling">calling：</string>
    <string name="invite_replying">video intite</string>
    <string name="default_name">xiaoyong</string>
    <string name="network_error">Network error, please check !</string>
    <string name="cannot_call_self">Cann\'t call number of this.</string>
    <string name="myid">my id</string>
    <string name="phone_user">Phone</string>
    <string name="input_number_hint">Robot id or telephone</string>
    <string name="select_videosize">Please select video size：</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="The_other_party_did_not_answer">The peer did not answer</string>
    <string name="The_other_party_has_declined">The other party has declined your call request.</string>
    <string name="robot_id_error">Robot id error</string>
    <string name="read_robot_id_error">Read robot id error</string>
    <string name="not_network_error">No network, please check the network</string>
    <string name="system_time_error">System time error, please setting time</string>
    <string name="server_request_error">Server request failed, please check the network</string>
    <string name="connect_server_failed">Connect failed to server, please check the network</string>
    <string name="connect_not_success">The connection server is not successful, please check the network</string>
    <string name="user_not_online">User not online</string>
    <string name="cannot_createmeeting_noowner">Non owner can not establish a meeting</string>
    <string name="meetingmember_cannot_morethan_four">Meeting members can not be more than 4 people</string>
    <string name="monitoring_cannot_createmeeting">Monitoring can not be established in the meeting, please turn off the monitor and try again.</string>
    <string name="calltype_error">CallType error</string>
    <string name="create_meeting_frequently_error">Creating video conference is too frequent, please try later.</string>
    <string name="not_selected_user">Not selected user</string>
    <string name="new_friend">New Friend</string>
    <string name="friend_type">Friend Type: </string>
    <string name="friend_number">Friend Number: </string>
    <string name="friend_alias">Alias: </string>
    <string name="friend_type_robot">Robot</string>
    <string name="friend_type_phone">Telephone</string>
    <string name="friend_exists">The number is already your friend!</string>
    <string name="add_friend_success">Add Friend Success</string>
    <string name="add_friend_failed">Add Friend failure</string>
    <string name="remove_friend_success">Remove friend success</string>
    <string name="remove_friend_failed">Remove friend failure</string>
    <string name="modify_friend_success">Modify friend nickname success</string>
    <string name="modify_friend_failed">Modify friend nickname failure</string>
    <string name="command_notexec">Command Not Execute</string>
    <string name="command_timeout">Command Timeout</string>
    <string name="meeting_invite">Meeting invite</string>
    <string name="settings_name" translatable="false">AppRTC Settings</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_description">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="muted">Muted</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="action_loopback">Loopback connection</string>
    <string name="connect_description">Connect to the room</string>
    <string name="add_favorite_description">Add favorite</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">QVGA (320 x 240)</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">15 fps</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_default">Manual</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_default">512</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">H264 Baseline</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_dlg">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_built_in_aec_not_available">Hardware AEC is not available</string>
</resources>