<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:background="@drawable/ic_background" >

    <!-- 左边列表 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingStart="0dp"
        android:paddingEnd="15dp"
        android:orientation="vertical" >
                
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
	            android:id="@+id/btn_back"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/selector_actionbar_back" />
        </LinearLayout>
        
        <!-- 通话列表 -->
	    <ListView
	        android:id="@+id/friend_listview"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginStart="10dp"
	        android:layout_marginTop="10dp" 
	        android:layout_marginBottom="5dp"
	        android:fadingEdge="none"
	        android:cacheColorHint="@android:color/transparent"
	        android:listSelector="#ffffff"
	        android:divider="#204954"
	        android:dividerHeight="1px"
	        android:scrollbars="none" />
    
    </LinearLayout>

    <!-- 右边拨盘 -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center" >
	    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal" >
	        
            <TextView
                android:id="@+id/tv_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:hint="@string/input_number_hint" />
	        
	        <Button
	            android:id="@+id/btn_backspace"
	            android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_backspace" />
	        
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
                
                <Button
	                android:id="@+id/btn_number_one"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
	                android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_one"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="1"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:id="@+id/btn_number_two"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_two"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="2"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:id="@+id/btn_number_three"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_three"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="3"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:background="@android:color/transparent"
                    style="?android:attr/borderlessButtonStyle" />
            
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            
                <Button
	                android:id="@+id/btn_number_four"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_four"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="4"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:id="@+id/btn_number_five"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_five"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="5"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:id="@+id/btn_number_six"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_six"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="6"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:background="@android:color/transparent"
                    style="?android:attr/borderlessButtonStyle" />
            
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            
                <Button
	                android:id="@+id/btn_number_seven"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_seven"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="7"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:id="@+id/btn_number_eight"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_eight"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="8"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:id="@+id/btn_number_nine"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_nine"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="9"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:background="@android:color/transparent"
                    style="?android:attr/borderlessButtonStyle" />
            
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            
                <Button
	                android:id="@+id/btn_number_asterisk"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_asterisk"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="*"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:id="@+id/btn_number_zero"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_zero"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="0"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button
	                android:id="@+id/btn_number_pound"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:layout_gravity="fill"
	                android:text="@string/number_pound"
	                android:textColor="#ffffff"
	                android:textSize="24sp"
	                android:background="@drawable/selector_number"
	                android:tag="#"
	                style="?android:attr/borderlessButtonStyle" />
	            <Button    
	                android:id="@+id/btn_dial"
	                android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
	                android:background="@drawable/selector_dial"
	                style="?android:attr/borderlessButtonStyle" />
            
            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>